Fixed section height on mobile screens

--- a/assets/styles/layout/_sections.scss
+++ b/assets/styles/layout/_sections.scss
@@ -7,6 +7,7 @@
 
   &:is([data-name="hero"], [data-height="fill"]) {
     min-height: 100vh;
+    min-height: 100svh;
     @include flexCentering();
 
     &[data-name="hero"] {
